--- a/payment.html
+++ b/payment.html
@@ -1,6 +1,7 @@
 <html>
   <body>
-  	<script>
+	  <script src="https://storage.googleapis.com/prshim/v1/payment-shim.js"></script>
+  	<script>	
         function createRequest(supportedInstruments, details, options) {
       		var request = new PaymentRequest(supportedInstruments, details, options);
           }
