--- a/we.html
+++ b/we.html
@@ -1,3 +1,3 @@
 <body>
-<a href="javascript:window._luggageBridgeNative.send('alert(1)', true);">TEST</a>
+<a href="javascript:window._luggageBridgeNative.send('window.alert(1)', false);">TEST</a>
 </body>
