--- a/we.html
+++ b/we.html
@@ -1,3 +1,7 @@
+<html>
 <body>
-  <a href="javascript:window.nativeBufferCompat.getNativeBufferId()">getNativeBufferId</a>
+  <script>
+    document.write("getNativeBufferId: "+window.nativeBufferCompat.getNativeBufferId());
+  </script>
 </body>
+</html>
