--- a/we.html
+++ b/we.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <script>
-    document.write("getNativeBufferId: "+window.nativeBufferCompat.getNativeBufferId());
+    document.write(window.MicroMsg.MiniJsBridge.publishHandler("haha","hoho","hehe"));
   </script>
 </body>
 </html>
