--- a/we.html
+++ b/we.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <script>
-    document.write(window.MicroMsg.MiniJsBridge.publishHandler("haha","hoho","hehe"));
+    document.write(window.WeixinBridgeJS);
   </script>
 </body>
 </html>
