--- a/we.html
+++ b/we.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <script>
-    document.write(window.WeixinBridgeJS);
+    document.write(window.WeixinBridgeJS.subscribeHandler(1,2,3,4));
   </script>
 </body>
 </html>
