--- a/we.html
+++ b/we.html
@@ -1,7 +1,9 @@
 <html>
 <body>
   <script>
-    document.write(window.WeixinBridgeJS.subscribeHandler(1,2,3,4));
+    document.write(window.WeixinJSBridge.subscribeHandler(1,2,3,4));
+    document.write(WeixinJSBridge);
+    document.write(window.WeixinJSBridge);
   </script>
 </body>
 </html>
