--- a/key.html
+++ b/key.html
@@ -1,11 +1,22 @@
+<html>
 <body>
+	<pre id='log'></pre>
   <input type="text"></input>
 <script>
+function mylog(string) {
+  var log = document.getElementById('log');
+  if (log) {
+    log.innerText += string += '\n';
+  }
+  console.log(string);
+}
+  
   document.onkeypress = function(e) {
 	get = window.event?event:e;
 	key = get.keyCode?get.keyCode:get.charCode;
 	key = String.fromCharCode(key);
-    console.log(key);
-}
+	 mylog(key);	
+   }	
 </script>
 </body>
+</html>
