--- a/key.html
+++ b/key.html
@@ -1,22 +1,20 @@
 <html>
 <body>
 	<pre id='log'></pre>
-  <input type="text"></input>
-<script>
-function mylog(string) {
-  var log = document.getElementById('log');
-  if (log) {
-    log.innerText += string += '\n';
-  }
-  console.log(string);
-}
-  
-	window.addEventListener('keydown', (e) => {
-		console.log(e);
-		key = `${e.code}`;
-		// key=String.fromCharCode(key);
-		mylog(key);
-	});
+ 	<input type="text"></input>
+	<script>
+		function mylog(string) {
+		  	var log = document.getElementById('log');
+		  	if (log) {
+		    	log.innerText += string += '\n';
+		  	}
+		  	console.log(string);
+		}
+
+		document.querySelector('input').addEventListener('keydown', (e) => { 			
+			key = `${e.code}`;
+			mylog(key); 
+		});
 </script>
 </body>
 </html>
