--- a/key.html
+++ b/key.html
@@ -12,6 +12,7 @@
 		}
 
 		document.querySelector('input').addEventListener('keydown', (e) => { 			
+			console.log(e);
 			key = `${e.code}`;
 			mylog(key); 
 		});
