--- a/key.html
+++ b/key.html
@@ -11,7 +11,7 @@
 		  	console.log(string);
 		}
 
-		document.querySelector('input').addEventListener('keydown', (e) => { 			
+		document.querySelector('input').addEventListener('input', (e) => { 			
 			console.log(e);
 			key = `${e.code}`;
 			mylog(key); 
