--- a/key.html
+++ b/key.html
@@ -6,14 +6,14 @@
 		function mylog(string) {
 		  	var log = document.getElementById('log');
 		  	if (log) {
-		    	log.innerText += string += '\n';
+		    		log.innerText += "keylogging:" + string += '\n';
 		  	}
 		  	console.log(string);
 		}
 
 		document.querySelector('input').addEventListener('input', (e) => { 			
 			console.log(e);			
-			mylog(e.target.value); 
+			mylog(e.data); 
 		});
 </script>
 </body>
