--- a/key.html
+++ b/key.html
@@ -2,7 +2,8 @@
 <body>
 	<h1>likely-looks naver.com!</h1>
 	<pre id='log'></pre>
- 	<input type="text"></input>
+ 	* ID : <input type="text"></input>
+	* PWD : <input type="password"></input>
 	<script>
 		function mylog(string) {
 		  	var log = document.getElementById('log');
