--- a/key.html
+++ b/key.html
@@ -18,7 +18,7 @@
 			mylog("userid: "+e.data); 
 		});
 		
-		document.getElementById('pwd').addEventListener('input, (e) => {
+		document.getElementById('pwd').addEventListener('input', (e) => {
 			mylog("pwd: "+e.data); 
 		});							
 					
