--- a/wei.html
+++ b/wei.html
@@ -6,5 +6,5 @@
   <a href="javascript:xwebToNative.onVideoError(1, '<script>alert(1);</script>')">onVideoError</a>
   <a href="javascript:xwebToNative.onVideoEnterFullscreen(false, 0, 0, 0, false, false, 0, 0, [])">onVideoEnterFullscreen</a>
   <a href="javascript:xwebToNative.onVideoGetFrame(0, 0, 'data:image/png;base64,PHNjcmlwdD5hbGVydCgiWFNTIik7PC9zY3JpcHQ+Cg==')">onVideoGetFrame</a>
-  <a href="javascript:__WeixinJSBridge.call('alert(1)', {}, 'function x() { alert(2);')">call TEST</a>
+  <a href="javascript:__WeixinJSBridge.call('alert(1)', {}, 'function x() { alert(2); }')">call TEST</a>
 </body> 
