--- a/wei.html
+++ b/wei.html
@@ -28,9 +28,8 @@
   		mylog(c);
   		var b = window.__wx._getHtmlContent();
   		mylog(b);
-  		var d = window.__wx._sendMessage("<script>alert(1);</script>");
+  		var d = window.__wx._sendMessage("<b>HAHA</b>");
   		mylog(d);
   	});
   </script>
 </body> 
-
