--- a/wei.html
+++ b/wei.html
@@ -26,7 +26,7 @@
   		mylog(a);  	
   		var c = window.__wx._getDgtVerifyRandomStr();
   		mylog(c);
-  		var b = window.__wx._getHtmlContent();
+  		var b = window.__wx._getHtmlContent("ABCD");
   		mylog(b);
   		var d = window.__wx._sendMessage("<b>HAHA</b>");
   		mylog(d);
