--- a/wei.html
+++ b/wei.html
@@ -28,7 +28,7 @@
   		mylog(c);
   		var b = window.__wx._getHtmlContent("ABCD");
   		mylog(b);
-  		var d = window.__wx._sendMessage("<b>HAHA</b>");
+  		var d = window.__wx._sendMessage("{'babo':'hoho'}");
   		mylog(d);
   	});
   </script>
