--- a/hw.html
+++ b/hw.html
@@ -1,4 +1,4 @@
 <script>
-  console.log("haha" : window.location.origin);
+  console.log("origin:"+window.location.origin);
   hwJSNetwork.sendData("https://", "GET", "", "", "console.log(window.location.origin); dummy");
 </script>
