--- a/hw.html
+++ b/hw.html
@@ -1,6 +1,6 @@
 <body>
 <script>
   console.log(window.location.origin);
-  hwJSNetwork.sendData("https://", "GET", "", "", "window.alert(1); var body = window.document.body.innerHTML; window.alert(body.slice(100)); dummy");
+  hwJSNetwork.sendData("https://", "GET", "", "", "window.alert(window.location.origin); var body = window.document.body.innerHTML; window.alert(body.slice(100)); dummy");
 </script>
 </body>
