--- a/hw.html
+++ b/hw.html
@@ -1,4 +1,4 @@
 <script>
-  console.log(window.location.origin);
-  hwJSNetwork.sendData("https://", "GET", "", "", "window.alert(window.location.origin); var body = window.document.body.innerHTML; window.alert(body.slice(100)); dummy");
+  window.alert("iframe:"+window.location.origin);
+  hwJSNetwork.sendData("https://", "GET", "", "", "window.alert('sendData:'+window.location.origin); var body = window.document.body.innerHTML; window.alert(body.slice(100)); dummy");
 </script>
