--- a/int.html
+++ b/int.html
@@ -1,3 +1,3 @@
 <script>
-  location.href="intent:#Intent;component=com.tencent.mm/com.tencent.mm.plugin.base.stub.WXShortcutEntryActivity;package=com.tencent.mm;action=com.tencent.mm.action.WX_SHORTCUT;S.ext_info='https://www.google.com';I.type=2;end;";
-</script>  
+  location.href="intent:#Intent;component=com.tencent.mm/com.tencent.mm.plugin.setting.ui.setting.SelfQRCodeUI;package=com.tencent.mm;action=android.intent.action.VIEW;category=android.intent.category.DEFAULT;end;";
+</script>
