--- a/int.html
+++ b/int.html
@@ -1,3 +1,4 @@
 <script>
-  location.href="intent:#Intent;component=com.tencent.mm/com.tencent.mm.plugin.setting.ui.setting.SelfQRCodeUI;package=com.tencent.mm;action=android.intent.action.VIEW;category=android.intent.category.DEFAULT;end;";
+  location.href="intent:#Intent;component=com.tencent.mm/com.tencent.mm.plugin.setting.ui.setting.SelfQRCodeUI;package=com.tencent.mm;action=android.intent.action.VIEW;category=android.intent.category.DEFAULT;scheme=http;end;";
+  location.href=""
 </script>
