--- a/int.html
+++ b/int.html
@@ -1,6 +1,7 @@
 <script>
   // location.href="intent:#Intent;component=com.tencent.mm/com.tencent.mm.plugin.setting.ui.setting.SelfQRCodeUI;package=com.tencent.mm;action=android.intent.action.VIEW;category=android.intent.category.DEFAULT;scheme=http;end;";
 
-  location.href="weixin://openapi/openwebview/result?url='<script>alert(1);</script>'";
-
+  location.href="weixin://openapi/openwebview/result?alert(1)";
+  location.href="http://google.com";
+  location.href="sms://127.0.0.1?body=window.alert(2)";
   </script>
