--- a/int.html
+++ b/int.html
@@ -3,5 +3,5 @@
 
   location.href="weixin://openapi/openwebview/result?alert(1)";
   location.href="http://google.com";
-  location.href="sms://127.0.0.1?body=window.alert(2)";
+  location.href="sms:\\127.0.0.1\\body=window.alert(2)";
   </script>
