--- a/int.html
+++ b/int.html
@@ -8,5 +8,4 @@
 
   </script>
 
-  <iframe src="http://mail.google.com" width=100%></iframe>
-  
+  <iframe src="http://www.google.com" width=100% height=100%></iframe>
