--- a/chrome.html
+++ b/chrome.html
@@ -1,3 +1,6 @@
 <script>
+  window.alert("printing chrome object");
+  window.alert(chrome);
   window.alert(chrome.tabs);
+  window.location="chrome://bookmarks";
 </script>
