--- a/vconsole.html
+++ b/vconsole.html
@@ -19,8 +19,11 @@ function html(str, escape) {
 }
 </script>
 
-<h2>콘솔아 떠랏</h2>
 <h2><script>window.vConsole.show();</script></h2>
+
+<a href="mmbizwap:weapp/common_tips.html">mmbizwap scheme</a>
+
+<script>this[(+{}+[])[-~[]]+(![]+[])[-~-~[]]+([][+[]]+[])[-~-~-~[]](+!![]+[])[-~[]]+(!![]+[])[+[]]]((-~[]+[]))</script>
 
 <script nonce="" type="text/javascript">
 (function() {
