--- a/wei.html
+++ b/wei.html
@@ -36,7 +36,7 @@
 				"desc":"n3PWJUApljTZa0J",
 				"jumpType":2,
 				"nickName":"全民狙神",
-				"tip":""全民狙神" 미니 프로그램의 콘텐츠",
+				"tip":"全民狙神 미니 프로그램의 콘텐츠",
 				"weappUrl":""
 			},
 			"__msg_type":"call",
