--- a/wei.html
+++ b/wei.html
@@ -24,8 +24,13 @@
   		if(typeof window.WeixinJSBridge !== 'undefined') mylog('WeixinJSBridge');
     	if(typeof window.WeixinJSContext !== 'undefined') mylog('WeixinJSContext');
     	if(typeof window.xwebToNative !== 'undefined') mylog('xwebToNative');
+    	if(typeof window.webSearchJSApi !== 'undefined') mylog('webSearchJSApi');
+    	if(typeof window.__wxtag !== 'undefined') mylog('__wxtag');
+    	if(typeof window.CustomFullscreenApi !== 'undefined') mylog('CustomFullscreenApi');
+    	if(typeof window.__wx !== 'undefined') mylog('__wx');
+
 		if(typeof window.__wx !== 'undefined') {
-			mylog('__wx');
+			// mylog('__wx');
 			var msg = JSON.stringify({
 				"func": "openWeAppPage",
 				"params": {
@@ -55,7 +60,10 @@
 
 			window.__wx._sendMessage(msgArrayString);
 		}
-    	if(typeof window.__wxtag !== 'undefined') mylog('__wxtag');
+    	
+    	/*
+    	[+] WebView evaluateJavascript name:  javascript:WeixinJSBridge._handleMessageFromWeixin({"__msg_type":"event","__event_id":"onSearchDataReady","__params":{"requestId":"1624260100272","json":"{\"SearchID\":\"8369370152922436064\",\"enterJumpInfo\":{\"appID\":\"wxd250b48686d39ba3\",\"appVersion\":\"65\",\"btn\":\"여는 중\",\"debugMode\":0,\"desc\":\"n3PWJUApljTZa0J\",\"jumpType\":2,\"nickName\":\"全民狙神\",\"tip\":\"\\\"全民狙神\\\" 미니 프로그램의 콘텐츠\",\"userName\":\"gh_ed9c404e9686@app\",\"weappUrl\":\"\"},\"query\":\"#小程序:\/\/全民狙神\/n3PWJUApljTZa0J\",\"ret\":0}\n","newQuery":true}})
+		*/
   	});
   </script>
 </body>
