--- a/wei.html
+++ b/wei.html
@@ -14,7 +14,7 @@
 		window.WeixinJSBridge = { 
 			_handleMessageFromWeixin:function(msg) {
 				var msg_str = JSON.stringify(msg);
-				mylog(msg_str['__json_message']);
+				mylog(msg_str);
 			}
 		}
 	</script>
