--- a/wei.html
+++ b/wei.html
@@ -13,10 +13,9 @@
 	<script>
 		window.WeixinJSBridge = { 
 			_handleMessageFromWeixin:function(msg) {
-				mylog("Hook _handleMessageFromWeixin()");
+				mylog("Hook _handleMessageFromWeixin");
 				var msg_str = JSON.stringify(msg);
-				mylog(msg_str);
-				window.WeixinJSBridge._handleMessageFromWeixin(msg);
+				mylog(msg_str);				
 			}
 		}
 	</script>
