--- a/wei.html
+++ b/wei.html
@@ -22,6 +22,8 @@
 
 	<script>
 		function test() {
+			mylog("test");
+			
 			var msg = JSON.stringify({
 				"__msg_type":"event",
 				"__event_id":"onSearchDataReady",
@@ -30,7 +32,9 @@
 					"json":"{\"SearchID\":\"8369370152922436064\",\"enterJumpInfo\":{\"appID\":\"wxd250b48686d39ba3\",\"appVersion\":\"65\",\"btn\":\"여는 중\",\"debugMode\":0,\"desc\":\"n3PWJUApljTZa0J\",\"jumpType\":2,\"nickName\":\"全民狙神\",\"tip\":\"\\\"全民狙神\\\" 미니 프로그램의 콘텐츠\",\"userName\":\"gh_ed9c404e9686@app\",\"weappUrl\":\"\"},\"query\":\"#小程序:\/\/全民狙神\/n3PWJUApljTZa0J\",\"ret\":0}",
 					"newQuery":true
 				}
-			})
+			});
+
+			window.WeixinJSBridge._handleMessageFromWeixin(msg);
 		};
 
 		test();
