--- a/wei.html
+++ b/wei.html
@@ -31,7 +31,7 @@
 				"__event_id":"onSearchDataReady",
 				"__params": {
 					"requestId":"1624260100272",
-					"json":"{\"SearchID\":\"8369370152922436064\",\"enterJumpInfo\":{\"appID\":\"wxd250b48686d39ba3\",\"appVersion\":\"65\",\"btn\":\"여는 중\",\"debugMode\":0,\"desc\":\"n3PWJUApljTZa0J\",\"jumpType\":2,\"nickName\":\"全民狙神\",\"tip\":\"\\\"全民狙神\\\" 미니 프로그램의 콘텐츠\",\"userName\":\"gh_ed9c404e9686@app\",\"weappUrl\":\"\"},\"query\":\"#小程序:\/\/全民狙神\/n3PWJUApljTZa0J\",\"ret\":0}",
+					"json":"{\"SearchID\":\"8369370152922436064\",\"enterJumpInfo\":{\"appID\":\"wxd250b48686d39ba3\",\"appVersion\":\"65\",\"btn\":\"여는 중\",\"debugMode\":0,\"desc\":\"n3PWJUApljTZa0J\",\"jumpType\":2,\"nickName\":\"全民狙神\",\"tip\":\"\\\"全民狙神\\\" 미니 프로그램의 콘텐츠\",\"userName\":\"gh_ed9c404e9686@app\",\"weappUrl\":\"\"},\"query\":\"#小程序:\/\/全民狙神\/n3PWJUApljTZa0J\",\"ret\":0}\n",
 					"newQuery":true
 				}
 			});
@@ -86,7 +86,10 @@
 		test();
     	
     	/*
-    	[+] WebView evaluateJavascript name:  javascript:WeixinJSBridge._handleMessageFromWeixin()
+    	[+] WebView evaluateJavascript name:  javascript:WeixinJSBridge._handleMessageFromWeixin({"__msg_type":"event","__event_id":"menu:setfont","__params":{"fontSize":"2"}})
+[+] WebView evaluateJavascript name:  javascript:WeixinJSBridge._handleMessageFromWeixin({"__msg_type":"event","__event_id":"onGetVertSearchEntriesData","__params":{"title":"유형별 검색","items":[{"businessType":8,"hotword":"모멘트","optype":5},{"businessType":2,"hotword":"글","optype":5},{"businessType":1,"hotword":"공식 계정","optype":5},{"businessType":1024,"hotword":"책","optype":5},{"businessType":512,"hotword":"음악","optype":5},{"businessType":384,"hotword":"스티커","optype":5}]}})
+[+] WebView evaluateJavascript name:  javascript:WeixinJSBridge._handleMessageFromWeixin({"__msg_type":"event","__event_id":"onSearchDataReady","__params":{"requestId":"1624262638994","json":"{\"SearchID\":\"301981404137340206\",\"enterJumpInfo\":{\"appID\":\"wxd250b48686d39ba3\",\"appVersion\":\"65\",\"btn\":\"여는 중\",\"debugMode\":0,\"desc\":\"n3PWJUApljTZa0J\",\"jumpType\":2,\"nickName\":\"全民狙神\",\"tip\":\"\\\"全民狙神\\\" 미니 프로그램의 콘텐츠\",\"userName\":\"gh_ed9c404e9686@app\",\"weappUrl\":\"\"},\"query\":\"#小程序:\/\/全民狙神\/n3PWJUApljTZa0J\",\"ret\":0}\n","newQuery":true}})
+
 		*/
   	});
   </script>
