--- a/wei.html
+++ b/wei.html
@@ -83,7 +83,7 @@
 			window.__wx._sendMessage(msgArrayString);
 		}
 
-		test();
+		// test();
     	
     	/*
     	[+] WebView evaluateJavascript name:  javascript:WeixinJSBridge._handleMessageFromWeixin({"__msg_type":"event","__event_id":"menu:setfont","__params":{"fontSize":"2"}})
