--- a/miniProgram.html
+++ b/miniProgram.html
@@ -11,11 +11,11 @@
 	</script>
 
 	<script>
-		window.WeixinJSBridge = { 
-			_handleMessageFromWeixin:function(msg) {
-				mylog(msg);
-			}
-		}
+		//window.WeixinJSBridge = { 
+			//_handleMessageFromWeixin:function(msg) {
+				//mylog(msg);
+			//}
+		//}
 	</script>
 
 	<script>
