--- a/miniProgram.html
+++ b/miniProgram.html
@@ -17,7 +17,6 @@
 			//}
 		//}
 	</script>
-
 	<script>
   	window.addEventListener('load', function(event) {  		
   		mylog("[+] Printing Javascript-bridges available");
@@ -59,7 +58,7 @@
 					"extReqParams":[{"key":"netType","textValue":"wifi"},{"key":"currentPage","uintValue":1},{"key":"requestId","textValue":"1624419664861"},{"key":"widgetVersion","uintValue":1017008}],
 					"requestId":"1624419664861",
 					"fromTagSearch":"1",
-					"extClientParams":"{"SnsContentType":"0","ShareSceneId":"wxid_c0ii6zc5886w22"}",
+					"extClientParams":"{\"SnsContentType\":\"0\",\"ShareSceneId\":\"wxid_c0ii6zc5886w22\"}",
 					"page":"result",
 					"sugId":"",
 					"specialSearch":null
