--- a/miniProgram.html
+++ b/miniProgram.html
@@ -1,5 +1,7 @@
 <html>
 <body>
+	<a href="file:///data/user/0/com.tencent.mm/files/public/websearch/template/app.html?isHomePage=1&netType=wifi&query=#小程序://全民狙神/n3PWJUApljTZa0J&isOpenPreload=1&pRequestId=1624416301494&sessionId=11188811355750867065&fontRatio=1.0&parentSearchID=&type=0&subSessionId=73_3186109879_1624416301494&version=80008446&platform=android&scene=73&msgSvrId=5831590946835401850&lang=ko&fromTagSearch=1&wechatVersion=671089471">click</a>
+
 	<pre id='log'></pre>	
 	<script>
 		function mylog(string) {
